luminance-hdr (2.2.1-1) unstable; urgency=low

  * NOT RELEASED YET
  * Switch to new upstream name luminance-hdr

 -- Andreas Metzler <ametzler@debian.org>  Sat, 12 May 2012 17:52:10 +0200

qtpfsgui (1.9.3-1.1) unstable; urgency=low

  * Non-maintainer upload.
  * Fixing segmentation fault when saving a HDR image (closes: #536666).

 -- Giovanni Mascellani <gio@debian.org>  Mon, 30 Aug 2010 23:08:43 +0200

qtpfsgui (1.9.3-1) unstable; urgency=low

  [ Cyril Brulebois ]
  * New upstream release (Closes: #530766).
  * debian/copyright:
     - Update accordingly.
  * debian/patches:
     - Get rid of timestamps.
  * Merge changes from experimental.
  * Update my address in the manpage too.
  * ACK the following patches by fabo, thanks!
  * Add dcraw to Depends, since this tool is needed, although not
    mentioned as a dependency in the upstream docs. Thanks to fabo
    again.
  * Add patch to disable some (new) default optimisations: openmp and
    sse2, because I'm not sure they are available on all platforms:
     - 50_disable_opts
  * debian/control:
     - Update Standards-Version from 3.8.0 to 3.8.1 (no changes needed).
  * Switch from cdbs to plain debhelper:
     - Update compat from 5 to 7.
     - B-D to debhelper (>= 7.0.50) to be able to use overrides.
     - Use debian/docs and debian/manpages to control dh_* accordingly.
     - Rework debian/rules.
     - Drop cdbs from B-D.

  [ Fathi Boudra ]
  * Add patch to fix documentation search path on Debian system:
     - 30_fix_documentation_search_path
  * Add patch to fix desktop file icon (Closes: #509305):
     - 40_fix_desktop_file_icon

 -- Cyril Brulebois <kibi@debian.org>  Sun, 07 Jun 2009 13:35:47 +0200

qtpfsgui (1.9.2-1) experimental; urgency=low

  * New upstream release.
  * debian/copyright:
     - Update accordingly.
     - Update my mail address, copyright years.
  * debian/control:
     - Update my mail address.
     - Bump Standards-Version from 3.7.3 to 3.8.0 (no changes needed).
